--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,83 +4,86 @@ on: [push, pull_request]
 
 jobs:
 
-# ======================================
-# 1️⃣ Тестирование
-# ======================================
+  # === Этап 1: Тестирование ===
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
-
+      
       - name: Run tests
         run: |
-          if [ -d tests ]; then
-            cd tests
-            dotnet test --logger "trx;LogFileName=test-results.trx"
-          else
-            echo "No tests directory found, skipping tests"
-          fi
-
+          cd tests
+          dotnet test --logger "trx;LogFileName=test-results.trx"
+      
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: tests/TestResults/*.trx
-        continue-on-error: true
 
-# ======================================
-# 2️⃣ Проверка безопасности (VirusTotal)
-# ======================================
+
+  # === Этап 2: Проверка безопасности (VirusTotal) ===
   security:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
-
+      
       - name: Debug project structure
         run: |
           echo "Current directory: $(pwd)"
-          find . -name "*.csproj" -o -name "*.sln" || true
-
+          echo "Project files:"
+          find . -name "*.csproj"
+          echo "Solution files:"
+          find . -name "*.sln"
+      
       - name: Build project
-        run: dotnet build src --configuration Release || echo "::warning::dotnet build failed"
-
+        run: dotnet build src --configuration Release
+      
       - name: Check vulnerable packages
         run: |
           PROJECT_FILE=$(find src -name "*.csproj" | head -1)
           if [ -z "$PROJECT_FILE" ]; then
-            echo "::warning::No .csproj file found, skipping vulnerability check"
-          else
-            dotnet list "$PROJECT_FILE" package --vulnerable || echo "::warning::vulnerability check failed"
+            echo "Error: No .csproj file found in src directory!"
+            exit 1
           fi
-
+          echo "Checking vulnerabilities in $PROJECT_FILE"
+          dotnet list "$PROJECT_FILE" package --vulnerable
+      
+      - name: List build artifacts
+        run: ls -la src/bin/Release/net8.0/
+      
       - name: VirusTotal scan
         run: |
+          echo "Starting VirusTotal scan..."
           DLL_FILE=$(find src/bin/Release/net8.0 -name "*.dll" | head -1)
           if [ -z "$DLL_FILE" ]; then
-            echo "::warning::No .dll found to scan"
-          elif [ -z "${{ secrets.VIRUSTOTAL_API_KEY }}" ]; then
-            echo "::warning::VIRUSTOTAL_API_KEY not set, skipping VirusTotal"
-          else
-            curl -s -X POST \
-              -H "x-apikey: ${{ secrets.VIRUSTOTAL_API_KEY }}" \
-              -F "file=@$DLL_FILE" \
-              https://www.virustotal.com/api/v3/files | jq . || echo "::warning::VirusTotal request failed"
+            echo "Error: No .dll files found in src/bin/Release/net8.0/"
+            exit 1
           fi
+          
+          echo "Scanning $DLL_FILE with VirusTotal..."
+          SCAN_RESULT=$(curl -s -X POST \
+            -H "x-apikey: ${{ secrets.VIRUSTOTAL_API_KEY }}" \
+            -F "file=@$DLL_FILE" \
+            https://www.virustotal.com/api/v3/files)
+          
+          echo "Scan results:"
+          echo "$SCAN_RESULT" | jq .
+          echo "VirusTotal scan completed for $DLL_FILE"
 
-# ======================================
-# 3️⃣ Сборка + версия + changelog (с нормализацией версий)
-# ======================================
+
+  # === Этап 3: Сборка, версионирование и changelog ===
   build:
     needs: security
     runs-on: ubuntu-latest
@@ -91,47 +94,41 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true
-
+      
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
+      
+      - name: Build
+        run: dotnet build src --configuration Release
 
-      - name: Build project
-        run: dotnet build src --configuration Release || echo "::warning::dotnet build failed"
-
-      - name: Detect and bump version
-        id: version
+      - name: Bump version
         run: |
-          # Ensure version file exists
           if [ ! -f version ]; then
             echo "1.0.0" > version
           fi
 
           CURRENT_VERSION=$(cat version)
-          IFS='.' read -ra V <<< "$CURRENT_VERSION"
-          MAJOR=${V[0]}; MINOR=${V[1]}; PATCH=${V[2]:-0}
-
-          BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}"
-          echo "Branch context: $BRANCH"
-          echo "Event: ${GITHUB_EVENT_NAME}"
-
-          # Bump logic: feat/* -> minor, fix/* -> patch, otherwise patch
-          if [[ "$BRANCH" == feat/* ]]; then
-            MINOR=$((MINOR + 1)); PATCH=0
-          elif [[ "$BRANCH" == fix/* ]]; then
+          IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
+          MAJOR=${VERSION_PARTS[0]}
+          MINOR=${VERSION_PARTS[1]}
+          PATCH=${VERSION_PARTS[2]}
+          
+          if [[ "$GITHUB_HEAD_REF" == feat/* ]]; then
+            MINOR=$((MINOR + 1))
+            PATCH=0
+          elif [[ "$GITHUB_HEAD_REF" == fix/* ]]; then
             PATCH=$((PATCH + 1))
           else
             PATCH=$((PATCH + 1))
           fi
-
+          
           NEW_VERSION="$MAJOR.$MINOR.$PATCH"
           echo "$NEW_VERSION" > version
-          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "Bumped version: $NEW_VERSION"
+          echo "Version bumped: $CURRENT_VERSION → $NEW_VERSION"
 
-      - name: Update changelog (normalize old headers to new version)
+      - name: Update changelog (preserve old versions)
         run: |
           NEW_VERSION=$(cat version)
           BRANCH="${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}"
@@ -143,7 +140,6 @@ jobs:
 
           TEMP_FILE="changelog_${NEW_VERSION}_$(date +%s).tmp"
 
-          # New entry header
           {
             echo "## [v${NEW_VERSION}] - ${DATE_SHORT}"
             echo "- Branch: ${BRANCH}"
@@ -156,16 +152,11 @@ jobs:
           } > "$TEMP_FILE"
 
           if [ -f changelog.md ]; then
-            echo "Normalizing old version headers to v${NEW_VERSION} and appending existing content..."
-            # Replace any header like "## [vX.Y.Z]" with the current version header text (keeps other content)
-            # We append the normalized content to keep previous changelog items (but with updated header tags)
-            sed -E "s/## \\[v[0-9]+\\.[0-9]+\\.[0-9]+\\]/## [v${NEW_VERSION}]/g" changelog.md >> "$TEMP_FILE"
+            cat changelog.md >> "$TEMP_FILE"
           fi
 
           mv "$TEMP_FILE" changelog.md
-          echo "changelog.md updated."
 
-          # Prepare changelog.txt for notifications
           {
             echo "Version: ${NEW_VERSION}"
             echo "Branch: ${BRANCH}"
@@ -174,53 +165,30 @@ jobs:
             fi
             echo "Date: ${DATE_FULL}"
             echo ""
-            echo "Recent changelog (top 20 lines):"
+            echo "Recent changelog:"
             head -n 20 changelog.md || true
           } > changelog.txt
-          echo "changelog.txt prepared."
+          echo "✅ changelog updated successfully"
 
-      - name: Ensure Git sees all changes
-        run: |
-          git reset
-          git add -A
-          git status --porcelain || true
-
-      - name: Commit & Push changelog safely
+      - name: Commit and push changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-          # Ensure all changes staged
-          git add -A
+          git add changelog.md changelog.txt version
 
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
+          if ! git diff-index --quiet HEAD --; then
+            git commit -m "CI: Update changelog for v$(cat version) [skip ci]"
+            git pull origin $(git rev-parse --abbrev-ref HEAD) --rebase
+            git push "https://$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:$(git rev-parse --abbrev-ref HEAD)
           else
-            git commit -m "CI: Update changelog for v$(cat version)" || true
-
-            # Detect branch; fall back to GITHUB_REF_NAME if detached HEAD
-            CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            if [ "$CURRENT_BRANCH" = "HEAD" ]; then
-              CURRENT_BRANCH="${GITHUB_REF_NAME}"
-            fi
-            echo "Detected branch for push: $CURRENT_BRANCH"
-
-            # Try to rebase on remote branch to avoid non-fast-forward errors, ignore failures
-            git fetch origin "$CURRENT_BRANCH" || true
-            git pull --rebase origin "$CURRENT_BRANCH" || true
-
-            # Push using token
-            git push "https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:"$CURRENT_BRANCH" || {
-              echo "::warning::Push failed; attempt force push"
-              git push --force "https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:"$CURRENT_BRANCH" || echo "::error::Force push failed"
-            }
+            echo "No changes to commit."
           fi
 
-# ======================================
-# 4️⃣ Уведомление в Telegram
-# ======================================
+
+  # === Этап 4: Telegram уведомление ===
   notify:
     needs: build
     runs-on: ubuntu-latest
@@ -228,60 +196,38 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      
       - name: Setup timezone
         run: sudo timedatectl set-timezone Europe/Moscow
-
-      - name: Prepare changelog.txt preview
+      
+      - name: Get version info
+        id: version
         run: |
-          if [ ! -f version ]; then
-            echo "1.0.0" > version
-          fi
+          echo "version=$(cat version)" >> $GITHUB_OUTPUT
+          echo "build_number=$GITHUB_RUN_NUMBER" >> $GITHUB_OUTPUT
+          echo "run_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
 
-          echo "╔══════════════════════════════╗" > changelog.txt
-          echo "║        BUILD SUMMARY         ║" >> changelog.txt
-          echo "╠══════════════════════════════╣" >> changelog.txt
-          echo "║ Version: $(cat version)      ║" >> changelog.txt
-          echo "║ Build: #$GITHUB_RUN_NUMBER   ║" >> changelog.txt
-          echo "║ Date: $(date +'%Y-%m-%d %H:%M MSK') ║" >> changelog.txt
-          echo "╚══════════════════════════════╝" >> changelog.txt
-          echo "" >> changelog.txt
-
-          if [ -f changelog.md ]; then
-            echo "Recent changes:" >> changelog.txt
-            head -n 10 changelog.md >> changelog.txt
-          fi
-
-          echo "Prepared changelog.txt:"
-          cat changelog.txt || true
-
-      - name: Send Telegram notification (if secrets exist)
+      - name: Send Telegram notification
         run: |
-          if [ -z "${{ secrets.TELEGRAM_BOT_TOKEN }}" ] || [ -z "${{ secrets.TELEGRAM_CHAT_ID }}" ]; then
-            echo "::warning::Telegram secrets missing, skipping notification"
-            exit 0
-          fi
-
-          TEXT="🚀 *Сборка #${{ github.run_number }} успешна!*%0A%0A"
-          TEXT+="🏷 *Версия:* \`$(cat version)\`%0A"
-          TEXT+="📅 *Дата:* $(date +'%Y-%m-%d %H:%M MSK')%0A"
-          TEXT+="🔗 *Репозиторий:* ${{ github.repository }}%0A%0A"
+          TEXT="🚀 *Сборка #${{ steps.version.outputs.build_number }} успешна\!*\n\n"
+          TEXT+="🏷 *Версия:* \`${{ steps.version.outputs.version }}\`\n"
+          TEXT+="📅 *Дата:* $(date +'%Y-%m-%d %H:%M MSK')\n"
+          TEXT+="🔗 *Подробности:* [${{ github.repository }}](${{ steps.version.outputs.run_url }})\n\n"
           TEXT+="_Изменения во вложенном файле_ ↓"
 
-          # Send message
-          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+          curl -s -X POST \
+            "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
             -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -d parse_mode="MarkdownV2" \
-            -d text="$TEXT" || echo "::warning::Telegram message failed"
+            -d parse_mode="Markdown" \
+            -d text="$TEXT"
 
-          # Send file
-          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
+          curl -s -X POST \
+            "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
             -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -F document=@changelog.txt || echo "::warning::Telegram file send failed"
+            -F document=@"${{ github.workspace }}/changelog.txt"
 
-# ======================================
-# 5️⃣ DockerHub публикация
-# ======================================
+
+  # === Этап 5: Публикация Docker образа ===
   dockerhub_publish:
     runs-on: ubuntu-latest
     needs: build
@@ -290,26 +236,21 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Docker login
-        run: |
-          if [ -z "${{ secrets.DOCKER_HUB_TOKEN }}" ] || [ -z "${{ secrets.DOCKER_HUB_LOGIN }}" ]; then
-            echo "::warning::DockerHub secrets missing; skipping docker publish"
-            exit 0
-          fi
-          echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_LOGIN }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_LOGIN }}" --password-stdin
 
       - name: Read version
         id: ver
         run: |
-          v=$(tr -d '\r\n ' < version 2>/dev/null || echo "1.0.0")
+          v=$(tr -d '\r\n ' < version); v=${v#v}
           echo "VERSION=$v" >> $GITHUB_OUTPUT
 
       - name: Build image
-        run: docker build -t ${{ secrets.DOCKER_HUB_LOGIN }}/ci-cd-pipeline:v${{ steps.ver.outputs.VERSION }} . || echo "::warning::docker build failed"
+        run: docker build -t ${{ secrets.DOCKER_HUB_LOGIN }}/ci-cd-pipeline:v${{ steps.ver.outputs.VERSION }} .
 
       - name: Push image
-        run: docker push ${{ secrets.DOCKER_HUB_LOGIN }}/ci-cd-pipeline:v${{ steps.ver.outputs.VERSION }} || echo "::warning::docker push failed"
+        run: docker push ${{ secrets.DOCKER_HUB_LOGIN }}/ci-cd-pipeline:v${{ steps.ver.outputs.VERSION }}
 
-      - name: Add dockerhub label (on PR)
+      - name: Add dockerhub label
         if: github.event.pull_request != null
         uses: actions-ecosystem/action-add-labels@v1
         with:
